Fix spacings in print version

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,10 @@ body * {
   @include screen-sm {
     padding: 0 3em;
   }
+
+  @include screen-print {
+    margin: 0 auto;
+  }
 }
 
 @include screen-print {
