--- a/src/sidebar/sidebar.scss
+++ b/src/sidebar/sidebar.scss
@@ -41,7 +41,7 @@
 
   &__content {
     @include screen-print {
-      padding: 0 1em;
+      padding: 0 0 0 2em;
       width: 80%;
       display: inline-block;
     }
